--- a/app.json
+++ b/app.json
@@ -53,7 +53,8 @@
             "backgroundColor": "#1a1a2e"
           }
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
